[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Charles Giguère <charles.giguere.2@ens.etsmtl.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.34"
itertools = "0.9.0"
num-traits = "0.2.14"
