[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Charles Giguère <charles.giguere.2@ens.etsmtl.ca>"]
edition = "2018"

[workspace]

[dependencies]
anyhow = "1.0.34"
itertools = "0.9.0"
indoc = "1.0.3"
regex = "1.4.2"
serde_scan = "0.4.1"
rayon = "1.5.0"
helper = { path = "helper" }
